--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "node server.js",
-    "cli": "node cli.js"
+    "cli": "node cli/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "commander": "^12.1.0",
     "cors": "^2.8.5",
+    "cross-spawn": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
@@ -29,6 +30,7 @@
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-microsoft": "^2.1.0",
+    "selfsigned": "^2.4.1",
     "winston": "^3.13.0"
   }
 }
