--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "node server.js",
-    "cli": "node cli/cli.js"
+    "cli": "dotenv -- node cli/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "express-validator": "^7.1.0",
     "inquirer": "^9.2.22",
     "jsonwebtoken": "^9.0.2",
+    "mongodb-memory-server": "^9.2.0",
     "mongoose": "^8.4.0",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
