Added generate-api-files script when creating a React, Backend app.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
-    "cli": "node cli/cli.js"
+    "cli": "node cli/cli.js",
+    "generate-certificate": "node scripts/generateCert.js"
   },
   "keywords": [],
   "author": "",
