--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.1",
     "bcrypt": "^5.1.1",
     "commander": "^12.1.0",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "cross-spawn": "^7.0.3",
     "dotenv": "^16.4.5",
@@ -22,6 +23,7 @@
     "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
     "inquirer": "^9.2.22",
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.2.0",
@@ -33,6 +35,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-microsoft": "^2.1.0",
     "pluralize": "^8.0.0",
+    "redis": "^4.6.14",
     "selfsigned": "^2.4.1",
     "winston": "^3.13.0"
   },
